[package]
name = "prismatine"
version = "0.1.0"
edition = "2021"
authors = ["royalmustard <royalmustard@memium.de>"]
license = "Other licenses can be set in Cargo.toml, but using the project needs to be GPLv3 compliant to be able to use the VST3 exporter. Check Cargo.toml for more information."
homepage = "memium.de"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
#nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
nih_plug = { git = "https://github.com/royalmustard/nih-plug.git", branch="wip", default-features = false,  features = ["assert_process_allocs", "standalone"] } # 
nih_plug_iced = { git = "https://github.com/royalmustard/nih-plug.git", branch="wip"}
seven_segment_iced = {path="../seven_segment_iced"}
realfft = "3.4"
#atomic_float = "1.1" supplied in nih
# dasp_ring_buffer="0.11"

iced_audio = {git = "https://github.com/fazibear/iced_audio", branch="iced-0.13"}
atomic_refcell = "0.1"
[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
